--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.0.4",
+    "@angular/cdk": "^19.2.19",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^19.0.0",
     "@angular/material": "^19.0.4",
     "@angular/platform-browser": "^19.0.0",
@@ -22,6 +23,7 @@
     "@angular/router": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
